--- a/views/landingPage.ejs
+++ b/views/landingPage.ejs
@@ -15,7 +15,7 @@
   </section>
 
   <section id="info">
-    <%- include("../components/contact") -%>
+    <%- include("../components/info") -%>
   </section>
 
   <section id="questions">
