--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -118,7 +118,7 @@
                     </div>
                     <div class="flex flex-100 mt-4 mx-8">
                         <div class="flex-grow mr-2">
-                            <label class="text-white block mb-1 font-bold" for="">Password</label>
+                            <label class="text-white block mb-1 font-bold" for="">Contraseña</label>
                             <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner" type="password"
                                 name="password" , id="password" required>
                         </div>
