--- a/components/info.ejs
+++ b/components/info.ejs
@@ -13,12 +13,7 @@
             <div class="lg:grid lg:grid-cols-2 lg:gap-8">
                 <span class="items-center rounded-full bg-icon text-icon flex justify-center"
                     style="height: 350px; width: 350px;">
-                    <svg class="w-34 h-34" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M16 8v8m-4-5v5m-4-2v2m-2 4h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z">
-                        </path>
-                    </svg>
+                    <img src="img/analisis.png" alt="Analisis" style="height: 250px; width: 250px;">
                 </span>
                 <div class="mt-12 ml-8 lg:mt-0">
                     <h3 class="text-3xl leading-8 font-bold tracking-tight text-gray-900 sm:text-4xl">
