--- a/components/panel.ejs
+++ b/components/panel.ejs
@@ -1,3 +1,43 @@
-<aside class="bg-blue-200 py-6 px-2 sm:pt-8 sm:px-6 lg:py-0 lg:px-0 lg:col-span-3">
-    <p class="text-center">Aqui va algo no sabemos qué, solo puse background para distinguirlo</p>
+<aside class="bg-white border-2 border-gray-200 py-6 px-2 sm:pt-8 sm:px-6 lg:py-0 lg:px-0 lg:col-span-3">
+    <div class="mx-2 mb-2 pt-10 grid gap-16">
+        <div>
+            <p class="text-sm text-gray-500">
+                <time datetime="2020-03-16">Mar 16, 2020</time>
+            </p>
+            <a href="#" class="mt-2 block">
+                <p class="text-xl font-semibold text-gray-900">
+                    Concurso de matemáticas en la Cd. de México
+                </p>
+                <p class="mt-3 text-base text-gray-500">
+                    Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo
+                    necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel. Iusto corrupti
+                    dicta.
+                </p>
+            </a>
+            <div class="mt-3">
+                <a href="#" class="text-base font-semibold text-indigo-600 hover:text-indigo-500">
+                    Read full story
+                </a>
+            </div>
+        </div>
+        <div>
+            <p class="text-sm text-gray-500">
+                <time datetime="2020-02-12">Feb 12, 2020</time>
+            </p>
+            <a href="#" class="mt-2 block">
+                <p class="text-xl font-semibold text-gray-900">
+                    Guillermo del Toro dará becas a niños apasionados
+                </p>
+                <p class="mt-3 text-base text-gray-500">
+                    Cupiditate maiores ullam eveniet adipisci in doloribus nulla minus. Voluptas iusto libero adipisci
+                    rem et corporis.
+                </p>
+            </a>
+            <div class="mt-3">
+                <a href="#" class="text-base font-semibold text-indigo-600 hover:text-indigo-500">
+                    Read full story
+                </a>
+            </div>
+        </div>
+    </div>
 </aside>
