--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,5 +6,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mate Al Alcance</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="small_logo.png">
+    <link rel="icon" href="img/small_logo.png">
 </head>
