--- a/views/ranking/ranking.ejs
+++ b/views/ranking/ranking.ejs
@@ -10,7 +10,7 @@
 
     <div class="flex items-end flex-wrap w-5/6 md:w-1/3 mx-auto mt-5 text-center">
         <div class="w-1/3 font-semibold uppercase bg-second-place h-32">
-            <i class="fas fa-space-shuttle mt-3"></i>
+            <i class="fas fa-rocket mt-3"></i>
             <br>
             <%= tops[1] ?  tops[1].name : 2 %>
         </div>
@@ -20,7 +20,7 @@
             <%= tops[0] ?  tops[0].name : 1 %>
         </div>
         <div class="w-1/3 font-semibold uppercase bg-third-place h-24">
-            <i class="fas fa-place-of-worship mt-3"></i>
+            <i class="fas fa-medal mt-3"></i>
             <br>
             <%= tops[2] ?  tops[2].name : 3 %>
         </div>
