Feature: edit imageProfile and navbar style

--- a/components/navbar.ejs
+++ b/components/navbar.ejs
@@ -28,19 +28,19 @@
                 </div>
                 <div class="hidden sm:ml-6 sm:flex">
                     <a href="/home"
-                        class="home inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium leading-5 text-gray-500 focus:outline-none focus:border-gray-300 transition duration-150 ease-in-out ">
+                        class="home inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium leading-5 text-gray-500 border-transparent focus:outline-none hover:text-gray-700 focus:border-gray-300 hover:border-gray-300 focus:text-gray-700 transition duration-150 ease-in-out ">
                         Inicio
                     </a>
                     <a href="/lista-problemas"
-                        class="problemas ml-8 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium leading-5 text-gray-500 hover:text-gray-700 hover:border-gray-300 focus:outline-none focus:text-gray-700 focus:border-gray-300 transition duration-150 ease-in-out">
+                        class="problemas ml-8 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium leading-5 text-gray-500 border-transparent hover:text-gray-700 hover:border-gray-300 focus:outline-none focus:text-gray-700 focus:border-gray-300 transition duration-150 ease-in-out">
                         Problemas
                     </a>
                     <a href="/all-blasts"
-                        class="rafaga ml-8 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium leading-5 text-gray-500 hover:text-gray-700 hover:border-gray-300 focus:outline-none focus:text-gray-700 focus:border-gray-300 transition duration-150 ease-in-out">
+                        class="rafaga ml-8 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium leading-5 text-gray-500 border-transparent hover:text-gray-700 hover:border-gray-300 focus:outline-none focus:text-gray-700 focus:border-gray-300 transition duration-150 ease-in-out">
                         Ráfagas
                     </a>
                     <a href="/ranking"
-                        class="ranking ml-8 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium leading-5 text-gray-500 hover:text-gray-700 hover:border-gray-300 focus:outline-none focus:text-gray-700 focus:border-gray-300 transition duration-150 ease-in-out">
+                        class="ranking ml-8 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium leading-5 text-gray-500 border-transparent hover:text-gray-700 hover:border-gray-300 focus:outline-none focus:text-gray-700 focus:border-gray-300 transition duration-150 ease-in-out">
                         Ranking
                     </a>
                 </div>
@@ -53,8 +53,9 @@
                             class="flex text-sm border-2 border-transparent rounded-full focus:outline-none focus:border-gray-300 transition duration-150 ease-in-out"
                             id="user-menu" aria-label="User menu" aria-haspopup="true">
                             <img class="h-8 w-8 rounded-full profile-pic" onclick="showOptions()"
-                                src="https://vignette.wikia.nocookie.net/lilostitchexperimentos/images/f/f6/Stitch_%28Lilo_%26_Stitch%29.svg.png/revision/latest/scale-to-width-down/340?cb=20150521210241&path-prefix=es"
-                                alt="Profile picture">
+                                src=""
+                                id='profileImage'
+                            >
                         </button>
                     </div>
 
@@ -160,5 +161,18 @@
     const tab = '<%- tab %>';
     const idTab = `.${tab}`;
     $(idTab).addClass('selected-tab');
+    $(idTab).removeClass('focus:text-gray-700');
+    $(idTab).removeClass('border-transparent');
+    $(idTab).removeClass('text-gray-500');
+    $(idTab).removeClass('hover:text-gray-700');
+    $(idTab).removeClass('focus:border-gray-300');
+    $(idTab).removeClass('hover:border-gray-300');
+
+    $.get("/api/getImage", function (data) {
+        if (data) {
+            console.log(data);
+            $('#profileImage').attr('src', data.img);
+        }
+    });
 
 </script>
