--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -15,7 +15,7 @@
                         <h1 class="text-gray-500 text-sm"> <%= user.email%> </h>
                     </div>
                     <div class="w-1/2 mx-auto my-3">
-                        <img src="https://vignette.wikia.nocookie.net/lilostitchexperimentos/images/f/f6/Stitch_%28Lilo_%26_Stitch%29.svg.png/revision/latest/scale-to-width-down/340?cb=20150521210241&path-prefix=es"
+                        <img src= <%= user.imageProfile %>
                             alt="user-img" className="h-full w-full object-cover" />
                     </div>
 
@@ -135,6 +135,19 @@
                             name="password" , id="password">
                     </div>
                 </div>
+
+                <div class="mt-4 mx-8">
+                    <h1 class="font-bold mb-2">Elige una nueva foto de perfil: </h1>
+                    <input type="text" name="imageProfile" id="imageProfile" class="hidden">
+                    <div class="flex justify-around flex-wrap p-1">
+                        <% images.forEach(image => {  %>
+                            <img class="img-option inline p-2 mx-5 my-3 p-5" src=<%=image%> data-image=<%=image%> >
+                        <% }); %>
+                    </div>
+                </div>
+
+                <hr class="w-3/4 mx-auto my-6">
+
                 <div class="flex justify-center flex-100 mt-4 mx-8 mb-8">
                     <button
                         class="bg-blue-500 hover:bg-blue-400  font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded"
@@ -195,8 +208,6 @@
         type: 'doughnut',
         data: DoughnutData
     });
-
-
 
     //SEGUNDA GRAFICA
     const { burstTopics } = userInfo;
@@ -277,6 +288,13 @@
             $('#edit-button').removeClass('bg-red-600');
             $('#edit-button').addClass('bg-green-700');
         }
+    });
+
+    $('.img-option').on('click', function(){
+        $('.img-option').removeClass('img-selected');
+        $(this).addClass('img-selected');
+        const newImage = $(this).attr('data-image');
+        $('input#imageProfile').val(newImage);
     });
 
 </script>
