--- a/components/navbar.ejs
+++ b/components/navbar.ejs
@@ -12,6 +12,21 @@
         color: rgb(99, 102, 241);
     }
 
+    .modal {
+        z-index: 1;
+        background-color: rgb(0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.4);
+    }
+
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 50%;
+    }
+
+
     @media (min-width: 640px) {
         #burger-menu {
             display: none !important;
@@ -52,10 +67,8 @@
                         <button
                             class="flex text-sm border-2 border-transparent rounded-full focus:outline-none focus:border-gray-300 transition duration-150 ease-in-out"
                             id="user-menu" aria-label="User menu" aria-haspopup="true">
-                            <img class="h-8 w-8 rounded-full profile-pic" onclick="showOptions()"
-                                src=""
-                                id='profileImage'
-                            >
+                            <img class="h-8 w-8 rounded-full profile-pic" onclick="showOptions()" src=""
+                                id='profileImage'>
                         </button>
                     </div>
 
@@ -65,7 +78,7 @@
                             <a href="/profile"
                                 class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 transition duration-150 ease-in-out"
                                 role="menuitem">Perfil</a>
-                            <a href="/logout"
+                            <a href="#" onclick="openModal()"
                                 class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 transition duration-150 ease-in-out"
                                 role="menuitem">Cerrar sesión</a>
                         </div>
@@ -119,14 +132,67 @@
                     class="block px-4 py-2 text-base font-medium text-gray-500 hover:text-gray-800 hover:bg-gray-100 focus:outline-none focus:text-gray-800 focus:bg-gray-100 transition duration-150 ease-in-out">
                     Perfil
                 </a>
-                <a href="/logout"
+                <button onclick="openModal()"
                     class="mt-1 block px-4 py-2 text-base font-medium text-gray-500 hover:text-gray-800 hover:bg-gray-100 focus:outline-none focus:text-gray-800 focus:bg-gray-100 transition duration-150 ease-in-out">
                     Cerrar sesión
-                </a>
+                </button>
             </div>
         </div>
     </div>
 </nav>
+
+<!-- The Modal -->
+<div id="myModal" class="modal hidden fixed w-full h-full overflow-auto top-0 left-0">
+    <div class="modal-content rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6"
+        role="dialog" aria-modal="true" aria-labelledby="modal-headline">
+        <div class="hidden sm:block absolute top-0 right-0 pt-4 pr-4">
+            <button type="button"
+                class="bg-white rounded-md text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                <span class="sr-only">Close</span>
+                <!-- Heroicon name: x -->
+                <svg class="h-6 w-6 close" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                    stroke="currentColor" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+            </button>
+        </div>
+        <div class="sm:flex sm:items-start">
+            <div
+                class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-indigo-100 sm:mx-0 sm:h-10 sm:w-10">
+                <!-- Heroicon name: exclamation -->
+                <svg class="h-6 w-6 text-indigo-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                    stroke="currentColor" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                </svg>
+            </div>
+            <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">
+                    Cerrar Sesión
+                </h3>
+                <div class="mt-2">
+                    <p class="text-sm text-gray-500">
+                        ¿Seguro que quieres cerrar sesión? Podrás volver a entrar en cualquier momento.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
+            <a href="/logout">
+                <button type="button"
+                    class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
+                    Cerrar
+                </button>
+            </a>
+            <button type="button" onclick="closeModal()"
+                class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm">
+                Cancelar
+            </button>
+        </div>
+    </div>
+</div>
+<!-- End Modal -->
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
@@ -174,5 +240,28 @@
             $('#profileImage').attr('src', data.img);
         }
     });
+
+    var modal = document.getElementById("myModal"); // Get the modal
+    var span = document.getElementsByClassName("close")[0]; // Get the <span> element that closes the modal
+
+    function openModal() {
+        modal.style.display = "block";
+    }
+
+    function closeModal() {
+        modal.style.display = "none";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function () {
+        modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
 
 </script>
