--- a/components/panel.ejs
+++ b/components/panel.ejs
@@ -4,7 +4,7 @@
             <p class="text-sm text-gray-500">
                 <time datetime="2020-03-16">Mar 16, 2020</time>
             </p>
-            <a href="#" class="mt-2 block">
+            <span class="mt-2 block">
                 <p class="text-xl font-semibold text-gray-900">
                     Concurso de matemáticas en la Cd. de México
                 </p>
@@ -13,10 +13,11 @@
                     necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel. Iusto corrupti
                     dicta.
                 </p>
-            </a>
+            </span>
             <div class="mt-3">
-                <a href="#" class="text-base font-semibold text-indigo-600 hover:text-indigo-500">
-                    Read full story
+                <a href="http://www.ommenlinea.org/wp-content/convocatorias2020/Convocatoria_CMX.pdf" target="_blank"
+                    class="text-base font-semibold text-indigo-600 hover:text-indigo-500">
+                    Leer más
                 </a>
             </div>
         </div>
@@ -24,7 +25,7 @@
             <p class="text-sm text-gray-500">
                 <time datetime="2020-02-12">Feb 12, 2020</time>
             </p>
-            <a href="#" class="mt-2 block">
+            <span class="mt-2 block">
                 <p class="text-xl font-semibold text-gray-900">
                     Guillermo del Toro dará becas a niños apasionados
                 </p>
@@ -32,10 +33,11 @@
                     Cupiditate maiores ullam eveniet adipisci in doloribus nulla minus. Voluptas iusto libero adipisci
                     rem et corporis.
                 </p>
-            </a>
+            </span>
             <div class="mt-3">
-                <a href="#" class="text-base font-semibold text-indigo-600 hover:text-indigo-500">
-                    Read full story
+                <a href="https://www.eluniversal.com.mx/ciencia-y-salud/jovenes-que-apoyo-guillermo-del-toro-ganan-medallas-en-olimpiada-de-matematicas"
+                    target="_blank" class="text-base font-semibold text-indigo-600 hover:text-indigo-500">
+                    Leer más
                 </a>
             </div>
         </div>
