--- a/views/problem/rafaga.ejs
+++ b/views/problem/rafaga.ejs
@@ -6,11 +6,26 @@
 
 <body>
 
-    <%- include("./../../components/navbar") -%>
+    <a href="/all-blasts">
+        <svg class="w-10 h-10 mt-5 ml-5 mb-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18">
+            </path>
+        </svg>
+    </a>
+    <br>
 
-    <aside id="finalPointsBanner" class="bg-white w-1/4 mx-auto p-4 text-center shadow-lg rounded-lg mt-5 pestana font-medium hidden">
+    <aside id="finalPointsBanner"
+        class="bg-white w-1/4 mx-auto p-4 text-center shadow-lg rounded-lg mt-5 pestana font-medium hidden">
         <i class="fas fa-hat-wizard text-2xl purple-icon"></i>
         <p> ¡Obtuviste <span id="finalPoints">0</span> puntos! </p>
+        <br>
+        <a href="/all-blasts">
+            <button
+                class="w-2/4 bg-green-500 hover:bg-green-400 text-white font-bold py-2 px-4 mx-auto mb-2 border-b-4 border-green-700 hover:border-green-500 rounded outline">
+                Ir a la lista de problemas
+            </button>
+        </a>
     </aside>
 
     <% rafagas.forEach((rafaga, index) => {  %>
@@ -51,7 +66,7 @@
         console.log('subit rafaga')
         answerSet = rafagasArray.map((raf, i) => {
             const inputId = raf.type === 'Abierta' ? 'single-answer' : 'multiple-answer';
-    
+
             const theAnswer = $(`#inputAnswer-${i}`).find(`input#${inputId}-input`).val();
             return theAnswer;
         });
